# RTS

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  RTS Game.csproj  RTS Game.sln  Rts.csproj  Rts.csproj.old  Rts.sln  Spatial.cs  default_bus_layout.tres  df  main.cpp  mono_crash.0.0.json  mono_crash.0.1.json  mono_crash.1d8ad1293.0.json  mono_crash.23735b09f.0.json  mono_crash.23735b0a1.0.json  project.godot  tileset.meshlib
Properties/: AssemblyInfo.cs
Resources/: interface_atlas.tres
Scenes/: BuildingUnit.tscn  CameraBase.tscn  Editor.tscn  GridMapTest.tscn  GridMapTestEnviroment.tscn  Interface.tscn  Map.tscn  MapManager.tscn  Menu.tscn  PlayerIngamePause.cs  PlayerIngamePause.tscn  SelectionRing.tscn  SlopeCollider.tscn  Test.tscn  TestEnvironment.tscn  Unit.tscn  testUnit.tscn
Src/: BuilderManager.cs  Interface.cs  Player.cs
TempRes/: Base.mesh  Bug.glb  Cube.mesh  Cube001.mesh  Material.material  Material_003.material  Material_004.material  Portal.glb  Portal.mesh  SlopeCollider.glb  SlopeCollider.glb.import  TestFloor.tres  arrow.glb  barrack.glb  barrack.glb.import  base.glb  box.glb  box.glb.import  endesga-32-1x.png.import  healthbar_green.png.import  healthbar_over.png.import  healthbar_progress.png.import  healthbar_red.png.import  healthbar_under.png.import  healthbar_yellow.png.import  tank.glb  tank.glb.import  tilemap1.glb  tilemap1.glb.import  tower1.glb  tower2.glb  tower3.glb  untitled.glb  untitled.glb.import  warriordist.dae  warriordist.dae.import  warriordist.glb  warriordist.glb.import  worker.glb  worker.glb.import
(+105 files in other folders)
