cmake_minimum_required(VERSION 3.0.0)
project(RTS VERSION 0.1.0)

include(CTest)
enable_testing()
set(OGRE_DIR /usr/share/OGRE/build/sdk/CMake)
set(OGRE_CONFIG_DIR Bin/orgeBuild/bin)
find_package(OGRE 1.12.7 REQUIRED COMPONENTS Bites RTShaderSystem)
file(COPY ${OGRE_CONFIG_DIR}/resources.cfg DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
add_executable(RTS main.cpp)

set(CPACK_PROJECT_NAME ${PROJECT_NAME})
set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
include(CPack)
target_link_libraries(RTS OgreBites OgreRTShaderSystem)